networking.tf
#Create VPC in us-east-1
resource "aws_vpc" "vpc_master" {
  provider             = aws.region-master
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "matts-master-vpc"
  }
}
#Create IGW in us-east-2
resource "aws_internet_gateway" "igw" {
  provider = aws.region-master
  vpc_id   = aws_vpc.vpc_master.id
}

#Get all available AZ's in VPC for master region
data "aws_availability_zones" "azs" {
  provider = aws.region-master
  state    = "available"
}

#Create subnet # 1 in us-east-2
resource "aws_subnet" "subnet_1" {
  provider                = aws.region-master
  availability_zone       = element(data.aws_availability_zones.azs.names, 0)
  vpc_id                  = aws_vpc.vpc_master.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}


#Create subnet #2  in us-east-2
resource "aws_subnet" "subnet_2" {
  provider                = aws.region-master
  vpc_id                  = aws_vpc.vpc_master.id
  availability_zone       = element(data.aws_availability_zones.azs.names, 1)
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
}


#Create route table in us-east-2
resource "aws_route_table" "internet_route" {
  provider = aws.region-master
  vpc_id   = aws_vpc.vpc_master.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "a" {
  provider       = aws.region-master
  subnet_id      = aws_subnet.subnet_1.id
  route_table_id = aws_route_table.internet_route.id
}
resource "aws_route_table_association" "b" {
  provider       = aws.region-master
  subnet_id      = aws_subnet.subnet_2.id
  route_table_id = aws_route_table.internet_route.id
}
#Overwrite default route table of VPC(Master) with our route table entries
resource "aws_main_route_table_association" "set-master-default-rt-assoc" {
  provider       = aws.region-master
  vpc_id         = aws_vpc.vpc_master.id
  route_table_id = aws_route_table.internet_route.id
}
